<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_id_nama">ID Nama</string>
    <string name="card_id_alamat">ID Alamat</string>
    <string name="card_nohp">ID Nohp</string>
    <string name="card_idpel_terdaftar">ID Pel Terdaftar</string>
    <string name="cardpel_hubungi">Hubungi Pelanggan</string>
    <string name="Totalbayar">Total Bayar: %s</string>
    <string name="cardpel_lihat">Cardpel Lihat</string>
    <string name="card_id_pegawai">Id Pegawai</string>
    <string name="card_namapel">Nama pelanggan</string>
    <string name="card_nama_cabang">Nama Cabang</string>
    <string name="card_simpan">Simpan</string>
    <string name="card_tambha_pelanggan">Tambah Pelanggan</string>
    <string name="card_cabang">Cabang</string>
    <string name="card_tambah_pegawai">Tambah Pegawai</string>
    <string name="validasi_nama">validasi_nama</string>
    <string name="validasi_alamat_pelanggan">validasi_alamat_pelanggan</string>
    <string name="validasi_nohp">validasi_nohp</string>
    <string name="validasi_cabang">validasi_cabang</string>
    <string name="tambah_pelanggan_sukses">tambah_pelanggan_sukses</string>
    <string name="tambah_pelanggan_gagal">tambah_pelanggan_gagal</string>
    <string name="validasi_alamat_pegawai">validasi_alamat_pegawai</string>
    <string name="tambah_pegawai_sukses">tambah_pegawai_sukses</string>
    <string name="tambah_pegawai_gagal">tambah_pegawai_gagal</string>
    <string name="tambah_layanan">tambah_layanan</string>
    <string name="nama_service">nama_service</string>
    <string name="harga_layanan">harga_layanan</string>
    <string name="toko_cabang">toko_cabang</string>
    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
    <string name="validasi_harga_layanan">validasi_harga_layanan</string>
    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
    <string name="tambah_layanan_simpan">tambah_layanan_simpan</string>
    <string name="tambah_layanan_gagal">tambah_layanan_gagal</string>
    <string name="tambah_cabang">tambah_cabang</string>
    <string name="tambah_nama_cabang">tambah_nama_cabang</string>
    <string name="tambah_alamat_cabang">tambah_alamat_cabang</string>
    <string name="tambah_telepon_cabang">tambah_telepon_cabang</string>
    <string name="tambah_layanan_cabang">tambah_layanan_cabang</string>
    <string name="Tambahan">Tambahan</string>
    <string name="Nama_Tambahan">Nama_Tambahan</string>
    <string name="harga_tambahan">harga_tambahan</string>
    <string name="cabang_tambahan">cabang_tambahan</string>
    <string name="status_tambahan">status_tambahan</string>
    <string name="simpan_tambahan">simpan_tambahan</string>
    <string name="validasi_nama_tambahan">validasi_nama_tambahan</string>
    <string name="validasi_harga_tambahan">validasi_harga_tambahan</string>
    <string name="validasi_cabang_tambahan">validasi_cabang_tambahan</string>
    <string name="validasi_status_tambahan">validasi_status_tambahan</string>
    <string name="tambahan_sukses">tambahan_sukses</string>
    <string name="tambahan_gagal">tambahan_gagal</string>
    <string name="Datapelanggan">Data pelanggan</string>
    <string name="NamaPelanggan">NamaPelanggan</string>
    <string name="NoHp">NO HP</string>
    <string name="PilihPelanggan">PilihPelanggan</string>
    <string name="LayananUtama">LayananUtama</string>
    <string name="PilihLayanan">PilihLayanan</string>
    <string name="LayananTambahan">LayananTambahan</string>
    <string name="Tambah">Tambah</string>
    <string name="Proces">Proces</string>
    <string name="NamaLayanan">NamaLayanan</string>
    <string name="Harga">Harga</string>
    <string name="KonfirmasiData">Konfirmasi Data</string>
    <string name="Nama">Nama</string>
    <string name="Layanan">Layanan</string>
    <string name="Batal">Batal</string>
    <string name="Pembayaran">Pembayaran</string>
    <string name="PilihMetodePembayaran">Pilih Metode Pembayaran</string>
    <string name="BayarNanti">Bayar Nanti</string>
    <string name="Tunai">Tunai</string>
    <string name="BerhasilDicetak">Berhasil Dicetak</string>
</resources>