<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="15sp"
    app:cardElevation="5dp"
    android:id="@+id/cv_card_pelanggan">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_card_pelanggan_id1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_pelanggan_id"
                android:textColor="@android:color/white"
                android:background="#A01D55"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_nama1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_id_nama"
                android:paddingStart="10dp"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textSize="18dp"
                />

            <TextView
                android:id="@+id/tv_alamat1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_id_alamat"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                />
            <TextView
                android:id="@+id/tv_nohp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_nohp"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/tv_terdaftar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/card_idpel_terdaftar"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_marginTop="5dp"
                />


            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:columnCount="3"
                android:rowCount="2"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <Button
                    android:id="@+id/bt_hubungi1"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cardpel_hubungi"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="#133E87"
                    />
                <Button
                    android:id="@+id/bt_lihat1"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cardpel_lihat"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/black"
                    />

            </GridLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>