<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvtambahlayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvnamalayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_service"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="250dp"
        android:textAlignment="center"/>\


    <EditText
        android:id="@+id/etnamalayanan"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvnamalayanan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/nama_service"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"/>

    <TextView
        android:id="@+id/tvharga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/harga_layanan"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etnamalayanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="300dp"
        android:textAlignment="center"/>\

    <EditText
        android:id="@+id/etharga"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvharga"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/harga_layanan"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"/>

    <TextView
        android:id="@+id/tvnamacabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toko_cabang"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etharga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="250dp"
        android:textAlignment="center"/>\

    <EditText
        android:id="@+id/etnamacabang"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvnamacabang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/toko_cabang"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"/>
    <Button
        android:id="@+id/btsimpanlayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_simpan"
        app:layout_constraintTop_toBottomOf="@id/etnamacabang"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>