<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelanggan.tambah_cabang">
    <TextView
        android:id="@+id/tvtambahcabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_cabang"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/tvnama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_nama_cabang"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="200dp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/etnamacabang1"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvnama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/tambah_alamat_cabang"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle"/>

    <TextView
        android:id="@+id/tvalamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_alamat_cabang"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etnamacabang1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="250dp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/etalamat"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvalamat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/tambah_alamat_cabang"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"/>

    <TextView
        android:id="@+id/tvtelepon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_telepon_cabang"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etalamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="270dp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/ettelepon"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tvtelepon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/tambah_telepon_cabang"
        android:inputType="phone"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rectangle"/>

    <TextView
        android:id="@+id/tvlayanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan_cabang"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@id/ettelepon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="250dp"
        android:textAlignment="center"/>
    <EditText
        android:id="@+id/etlayanan"
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/ettelepon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/tambah_layanan_cabang"
        android:padding="15dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rectangle"/>

    <Button
        android:id="@+id/btsimpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_simpan"
        app:layout_constraintTop_toBottomOf="@id/etlayanan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>