<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelanggan.tambahpegawai">
        <TextView
            android:id="@+id/tvtambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_tambah_pegawai"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/tvnama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_namapel"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="200dp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/etlengkap"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvnama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/card_namapel"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"/>

        <TextView
            android:id="@+id/tvalamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_id_alamat"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/etlengkap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="250dp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/etallengkap"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvalamat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/card_id_alamat"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"/>

        <TextView
            android:id="@+id/tvno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_nohp"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/etallengkap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="270dp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/etnohp"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/tvno"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/card_nohp"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle"/>

        <TextView
            android:id="@+id/tvcabang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_nama_cabang"
            android:textSize="15sp"
            app:layout_constraintTop_toTopOf="@id/etnohp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="250dp"
            android:textAlignment="center"/>
        <EditText
            android:id="@+id/etcab"
            android:layout_width="350dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toBottomOf="@id/etnohp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/card_nama_cabang"
            android:padding="15dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rectangle"/>

        <Button
            android:id="@+id/btsimpan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_simpan"
            app:layout_constraintTop_toBottomOf="@id/etcab"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="150dp"
            android:layout_marginTop="30dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>